pipeline setup and initial code

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,78 @@
 name: Update Contributors
 
 on:
-  pull_request:
-    types: [closed] 
-    branches:
-      - main         
+   pull_request:
+     types: [closed]
+     branches:
+       - main
 
 jobs:
   update-contributors:
-    if: github.event.pull_request.merged == true 
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
+
+    steps:
+     - name: Checkout Code
+       uses: actions/checkout@v3
+
+     - name: Generate Contributors Image
+       run: curl -L https://contrib.rocks/image?repo=singhmonica1999/Microservice3 > contributors.png
+
+     - name: Commit and Push Changes
+       run: |
+         git config --global user.name "GitHub Actions Bot"
+         git config --global user.email "actions@github.com"
+         git add contributors.png
+         git commit -m "Update contributors image after PR merge" || echo "No changes to commit"
+         git push
+
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-
-      - name: Generate Contributors Image
-        run: curl -L https://contrib.rocks/image?repo=singhmonica1999/medianest > contributors.png
-
-      - name: Commit and Push Changes
+      - name: Set environment variables for Spring Boot
         run: |
-          git config --global user.name "GitHub Actions Bot"
-          git config --global user.email "actions@github.com"
-          git add contributors.png
-          git commit -m "Update contributors image after PR merge" || echo "No changes to commit"
-          git push
+            echo "SPRING_DB_PASSWORD=${{ secrets.SPRING_DB_PASSWORD }}" >> $GITHUB_ENV
+            echo "SPRING_DB_URL=${{ secrets.SPRING_DB_URL }}" >> $GITHUB_ENV
+            echo "SPRING_DB_USERNAME=${{ secrets.SPRING_DB_USERNAME }}" >> $GITHUB_ENV
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Install Dependencies and Run Tests
+        run: mvn clean install
+      - name: Package Application
+        run: mvn package -DskipTests
+      - name: Extract Application Name and Version
+        id: extract-pom
+        run: |
+          APP_NAME=$(mvn help:evaluate -Dexpression=project.artifactId -q -DforceStdout)
+          APP_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+          echo "app_name=$APP_NAME" >> $GITHUB_ENV
+          echo "app_version=$APP_VERSION" >> $GITHUB_ENV
+      - name: Transfer JAR to remote server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USER }}
+          port: 22
+          key: ${{ secrets.REMOTE_SSH_KEY }}
+          source: target/*.jar
+          target: "~/jars"
+          rm: true
+      - name: SSH into Remote Server and Deploy
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USER }}
+          key: ${{ secrets.REMOTE_SSH_KEY }}
+          script: |
+            export SPRING_DB_URL=${{ env.SPRING_DB_URL }}
+            export SPRING_DB_USERNAME=${{ env.SPRING_DB_USERNAME }}
+            export SPRING_DB_PASSWORD=${{ env.SPRING_DB_PASSWORD }}
+            kill -9 $(lsof -t -i :${{ vars.PORT }}) || true
+            nohup java -Dserver.port=${{ vars.PORT }} -jar /home/${{ secrets.REMOTE_USER }}/jars/target/${{ env.app_name }}-${{ env.app_version }}.jar > ~/${{ env.app_name }}.log 2>&1 &
+            echo "Application started!"
