--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=progresstracker
+
+#db
+spring.datasource.url=${SPRING_DB_URL}
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.username=${SPRING_DB_USERNAME}
+spring.datasource.password=${SPRING_DB_PASSWORD}
+spring.jpa.show-sql=true
+
