--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>progresstracker</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>progresstracker</name>
-	<description>monitors and updates the user’s progress for media items (movies, series, games, and books), tracking their completion status and providing real-time updates to ensure seamless media consumption tracking across platforms.</description>
+	<description>monitors and updates the user's progress for media items (movies, series, games, and books), tracking their completion status and providing real-time updates to ensure seamless media consumption tracking across platforms.</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -38,7 +38,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
@@ -71,6 +78,31 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<extensions>
+			<extension>
+				<groupId>com.google.cloud.artifactregistry</groupId>
+				<artifactId>artifactregistry-maven-wagon</artifactId>
+				<version>2.2.0</version>
+			</extension>
+		</extensions>
 	</build>
+	<distributionManagement>
+		<snapshotRepository>
+		<id>artifact-registry</id>
+		<url>artifactregistry://us-east1-maven.pkg.dev/project-352913/jar-repository-snapshot</url>
+		</snapshotRepository>
+	</distributionManagement>
 
+	<repositories>
+		<repository>
+		<id>artifact-registry</id>
+		<url>artifactregistry://us-east1-maven.pkg.dev/project-352913/jar-repository-snapshot</url>
+		<releases>
+			<enabled>false</enabled>
+		</releases>
+		<snapshots>
+			<enabled>true</enabled>
+		</snapshots>
+		</repository>
+	</repositories>
 </project>
