--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,13 @@ spring.datasource.username=${SPRING_DB_USERNAME}
 spring.datasource.password=${SPRING_DB_PASSWORD}
 spring.jpa.show-sql=true
 
+# Kafka broker address
+spring.kafka.bootstrap-servers=localhost:9092
+# Consumer group ID
+spring.kafka.consumer.group-id=progress-tracker-group
+# Serialization settings
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
