--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.username=${SPRING_DB_USERNAME}
 spring.datasource.password=${SPRING_DB_PASSWORD}
 spring.jpa.show-sql=true
 
+# ActiveMQ Configuration
+spring.activemq.broker-url=${SPRING_MQ_HOST}
+spring.activemq.user=${SPRING_MQ_USERNAME}
+spring.activemq.password=${SPRING_MQ_PASSWORD}
+spring.jms.pub-sub-domain=false
